<resources>
    <string name="app_name">CookBookWatchPR8</string>
    <string name="CookBook">CookBook</string>
    <string name="Next">Next</string>
    <string name="b1">Борщ</string>
    <string name="b2">Цезарь</string>
    <string name="b3">Блинчики</string>
    <string name="b4">Молочный коктель</string>
    <string name="b5">Спагетти</string>
    <string name="default_time">00:00</string>
    <string name="back_arrow">Back arrow</string>
    <string name="logo_description">CookBook logo</string>
    <string name="borscht_icon">Borscht icon</string>
    <string name="spaghetti_icon">Spaghetti icon</string>
    <string name="pancakes_icon">Pancakes icon</string>
    <string name="milkshake_icon">Milkshake icon</string>
    <string name="salad_icon">Caesar salad icon</string>
    <string name="opisanie">Ингредиенты
                \nсвинина (говядина) на кости — 800 г;
                \nсвежая капуста — 300 г;
                \nкартофель — 3 шт.;
                \nсвёкла — 2 шт.;
                \nморковь — 1 шт.;
                \nлук репчатый — 2 шт.;
                \nтоматная паста — 1 ст. л.;
                \nсоль — 2 ст. л.;
                \nперец горошком — 6 шт.;
                \nлавровый лист — 2 шт.;
                \nуксус — 2 ст. л.;
                \nсахар — 1 ст. л.;
                \nчеснок — 1 шт..
                \nПошаговый рецепт:
                \n1.Сварить бульон: положить мясо в большую кастрюлю, залить водой, довести до кипения и снять пену. Добавить соль, перец, лавровый лист и луковицу. Варить бульон не менее 1,5 часов.
                \n2.Нарезанные лук и морковь жарить на сковороде, добавить соль, перец по вкусу. Затем добавить томатную пасту и свёклу, налить 2–3 половника бульона, 2 ст. л. уксуса и тушить 15 минут.
                \n3.Когда бульон закипит, отправить в кастрюлю нашинкованную свежую капусту. Картофель очистить, помыть и нарезать кубиками, также отправить в кастрюлю (следом за капустой).
                \n4.Перемешать ингредиенты борща, всыпать по 1 ст. л. соли и сахара, можно немного поперчить. Добавить зажарку из лука, моркови и свёклы и варить борщ на слабом огне 15 минут. Крышкой кастрюлю закрывать не следует.
                \n5.В самом конце добавить в борщ измельчённый чеснок. Довести до кипения и выключить огонь. Закрыть кастрюлю с борщом и оставить на горячей плите на 15 минут.</string>

</resources>