<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowItem"
    android:background="@android:color/black">

    <!-- Стрелка назад -->
    <ImageView
        android:id="@+id/backArrowShowItem"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/free_icon_arrow_14736767" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/free_icon_borscht_3056196"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="1dp" />

    <ScrollView
        android:layout_width="178dp"
        android:layout_height="159dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="137dp"
                    android:layout_height="144dp"
                    app:srcCompat="@drawable/hdb0hias5ck"
                    tools:layout_editor_absoluteX="21dp"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opisanie"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>