<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table"
    android:background="@android:color/black">


    <TextView
        android:id="@+id/timeTextViewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/free_icon_arrow_14736767" />

    <ScrollView
        android:layout_width="178dp"
        android:layout_height="158dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="21dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/free_icon_borscht_3056196"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="2dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    tools:layout_editor_absoluteY="9dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/free_icon_spaghetti_5620880"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    tools:layout_editor_absoluteY="8dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/free_icon_pancakes_12240816"
                    tools:layout_editor_absoluteX="-2dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/free_icon_milkshake_7441402"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/free_icon_caesar_salad_5570573"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="-3dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="62dp"
                    android:layout_height="23dp"
                    android:text="@string/b2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    tools:layout_editor_absoluteY="5dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>